welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:22: error: not found: value avance7
  fairecarre() ; avance7() ; fairecarre()
                 ^